@@ -1,5 +1,11 @@
 2012-11-13  Karl Berry  <karl@gnu.org>
 
+	* doc/Makefile.am (wwwdoc-build, wwwdoc-install): new targets
+	for updating the manuals on the web.
+	
+	* doc/texinfo.txi (makeinfo options): lowercase o options
+	in compatibility @anchor, since that's what the 4.13 manual had.
+
 	* tp/tests/tex_html_tests.sh, long_tests.sh, parser_base_tests:
 	avoid [ ... ] and test ... -a ...
 	* install-info/tests/*.test: use -x for better logging.
